添加实验室状态页面

--- a/src/main/webapp/layout/labMain.html
+++ b/src/main/webapp/layout/labMain.html
@@ -15,7 +15,9 @@
             <p><img src="${contextPath!}/static/img/labMain/home.png"></p>
             <h3>中海博睿实验室</h3>
         </div>
-        <div>
+        <div class="labMain_ct_right">
+            <p><img src="${contextPath!}/static/img/labMain/home.png"></p>
+            <h3>返回实验室状态</h3>
         </div>
     </div><!--头部content_top-->
     <div class="labMain_content_bottom">
