--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -170,7 +170,7 @@
                         </div>
 
                         <ul class="legend-bottom">
-                        	<li class="active"><a href=""><span class="icon"></span> 中海博睿</a></li>
+                        	<li><a href=""><span class="icon"></span>中海博睿</a></li>
                         	 ##for(type in productLine){
                         	 		##if(!typeLP.last){
                         	 			<li class=""><a href=""><span class="icon"></span> ${type.name!}</a></li>
