--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -13,12 +13,17 @@
 </head>
 
 <body>
-<div class="labMain_content">
+<div class="labMain_content" style="display: none">
+<!--<div class="labMain_content" >-->
     <div class="labMain_content_top">
         <h1>中海博睿介绍</h1>
         <div class="labMain_ct_right">
             <p><img src="${contextPath!}/static/img/labMain/home.png"></p>
             <h3>中海博睿实验室</h3>
+        </div>
+        <div class="labMain_ct_right">
+            <p><img src="${contextPath!}/static/img/labMain/home.png"></p>
+            <h3>实验室总状态</h3>
         </div>
     </div><!--头部content_top-->
 
