--- a/src/main/webapp/static/css/labOprateState.css
+++ b/src/main/webapp/static/css/labOprateState.css
@@ -9,17 +9,43 @@
 	padding: 0% 1% 2%;
 	height: 100%;
 }
+.pageBtn {
+	position: absolute;
+	right: 2.5%;
+	top: 4%;
+}
+.pageBtn .icon{
+	display: inline-block;
+	width:2em;
+	height: 2em;
+	cursor: pointer;
+	background-size: 100% 100%;
+}
+.pageBtn .icon:nth-of-type(1){
+	margin-right: 2em;
+	background-image: url("../img/labMain/labOprateState_prePage.png");
+}
+.pageBtn .icon:nth-of-type(1):hover,
+.pageBtn .icon:nth-of-type(1):active{
+	background-image: url("../img/labMain/labOprateState_prePage_active.png");
+}
+.pageBtn .icon:nth-of-type(2){
+	background-image: url("../img/labMain/labOprateState_nextPage.png");
+}
+.pageBtn .icon:nth-of-type(2):hover,
+.pageBtn .icon:nth-of-type(2):active{
+	background-image: url("../img/labMain/labOprateState_nextPage_active.png");
+}
+
 .leftContent>div{
 	flex:1;
 	display: flex;
-	/*outline: 1px dashed orangered;*/
 	padding: 0.6%;
 }
 .l-top>div,
 .l-mid>div,
 .l-bottom>div{
 	display: inline-block;
-	/*outline: 1px dashed greenyellow;*/
 }
 /*.l-top-title{*/
 [class$=-title]{
@@ -28,7 +54,7 @@
 	width:1.8em;
 	color: #fff;
 	font-size: 1.2em;
-	background-image: url("../img/labOprateState_title.png");
+	background-image: url("../img/labMain/labOprateState_title.png");
 	background-size: 100% 100%;
 }
 [class$=-title] h3{
