--- a/src/main/webapp/layout/tab/tab3.html
+++ b/src/main/webapp/layout/tab/tab3.html
@@ -75,6 +75,7 @@
                                 </ul>
                                 <ul>
                                     <div id="myChart43"></div>
+                                    <!--<div class="labLine"></div>-->
                                 </ul>
                             </div>
                         </li>
@@ -88,6 +89,7 @@
                                 </ul>
                                 <ul>
                                     <div id="myChart44"></div>
+                                    <!--<div class="labLine"></div>-->
                                 </ul>
                             </div>
                         </li>
