--- a/src/main/webapp/layout/labOperateState.html
+++ b/src/main/webapp/layout/labOperateState.html
@@ -12,7 +12,7 @@
 <div class="labMain_content">
     <div class="labMain_content_top">
         <h1>中海博瑞介绍</h1>
-        <div class="labMain_ct_right">
+        <div class="labMain_ct_btn">
             <p><img src="${contextPath!}/static/img/labMain/home.png"></p>
             <h3>中海博睿实验室</h3>
         </div>
