球页面局部改动

--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -19,8 +19,9 @@
                 <div class="sphere-left">
                     <div class="sphere-left-top">
                         <div class="chartBorder">
-                            <h3>覆盖区域</h3>
-                            <h4 class="noBG"><strong id="area_num">0</strong>大洲
+                            <h3>海尔工业园区分布</h3>
+                            <h4 class="noBG">覆盖：
+                            	<strong id="area_num">0</strong>大洲
                                 <strong id="country_num">0</strong>个国家
                                 <strong id="belong_num">0</strong>工业园区
                             </h4>
@@ -62,7 +63,7 @@
                     </div>
                     <div class="sphere-right-bottom">
                         <div class="chartBorder">
-                            <h3>实验室信息</h3>
+                            <h3>互联实验室</h3>
                             <h4 class="noBG">互联实验室： <strong> 376 </strong></h4>
                             <ul class="header">
                                 <li>实验室名称</li>
