--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -11,9 +11,9 @@
                     <div class="total_top_2_box">
                         <ul>
                             <li class="total_top_2_left xueli">学历
-                                <ul>
+                                <ul id="tab1_person_detail_1">
 
-                                    <li>
+                                   <!--  <li>
                                         <span class="bar_name">研究生</span>
                                         <div class="progress">
                                             <div class="progress-bar1" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%;height: 110%"></div>
@@ -33,13 +33,13 @@
                                             <div class="progress-bar1" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;height: 110%"></div>
                                         </div>
                                         <span>10%</span>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </li>
                             <li class=" total_top_2_left nianxian">年限
-                                <ul>
+                                <ul id="tab1_person_detail_2">
 
-                                    <li>
+                                  <!--   <li>
                                         <span class="bar_name">3-8年</span>
                                         <div class="progress">
                                             <div class="progress-bar2" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;height: 110%"></div>
@@ -67,13 +67,13 @@
                                             <div class="progress-bar2" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;height: 110%"></div>
                                         </div>
                                         <span>10%</span>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </li>
                             <li class="total_top_2_left zizhi">资历
-                                <ul>
+                                <ul id="tab1_person_detail_3">
 
-                                    <li>
+                                  <!--   <li>
                                         <span class="bar_name">权限检测</span>
                                         <div class="progress">
                                             <div class="progress-bar3" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;height: 110%"></div>
@@ -100,7 +100,7 @@
                                             <div class="progress-bar3" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width: 5%;height: 110%"></div>
                                         </div>
                                         <span>5%</span>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </li>
                         </ul>
