平面地图页局部改动

--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -583,7 +583,7 @@
         }).click(function () {
             $(".labMain_content").hide();
             $("#right").show();
-            var $li = $("#l").find(".flat-footer .legend ul li");
+            var $li = $("#l").find(".flat-footer .legend ul.legend-bottom li");
             $li.removeClass("active").each(function () {
                 bgImgOff($(this))
             })
