--- a/src/main/webapp/layout/tab/tab2.html
+++ b/src/main/webapp/layout/tab/tab2.html
@@ -473,7 +473,7 @@
 
                     </li>
                     <div class="echarts_lines echarts_line1">
-                        <span class="yingjubei" id="yingjubei_id_0">369&emsp;应具备数</span>
+                        <span class="yingjubei" id="yingjubei_id_0">369 应具备数</span>
                     </div>
 
                     <li>
@@ -481,14 +481,14 @@
 
                     </li>
                     <div class="echarts_lines echarts_line2">
-                        <span class="yingjubei" id="yingjubei_id_1">218&emsp;应具备数</span>
+                        <span class="yingjubei" id="yingjubei_id_1">218 应具备数</span>
                     </div>
                     <li>
                         <div id="myChart34"></div>
 
                     </li>
                     <div class="echarts_lines echarts_line3">
-                        <span class="yingjubei" id="yingjubei_id_2">172&emsp;应具备数</span>
+                        <span class="yingjubei" id="yingjubei_id_2">172 应具备数</span>
                     </div>
                     <li>
                         <div id="myChart35"></div>
@@ -516,7 +516,7 @@
 
                     </li>
                     <div class="echarts_lines echarts_line7">
-                        <span class="yingjubei" id="yingjubei_id_6">0&emsp;应具备数</span>
+                        <span class="yingjubei" id="yingjubei_id_6">0<br>应具备数</span>
                     </div>
                 </ul>
             </div>
