--- a/src/main/webapp/layout/ulab.html
+++ b/src/main/webapp/layout/ulab.html
@@ -35,3 +35,11 @@ ${layoutContent}
 </script>
 </html> 
   
+<!--
+待解决的问题：
+总状态：
+    tab1
+        1-3 标准状态 百分数确定
+        1-4 能力状态的x标签（青贝）
+        2-3,2-4 具体数值和样式修改（青贝）
+-->
