--- a/src/main/webapp/layout/right.html
+++ b/src/main/webapp/layout/right.html
@@ -44,6 +44,7 @@
 <script src="${contextPath!}/static/js/tab1_statistics.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/tab2_statistics.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/tab3_statistics.js?time=New Date()"></script>
+<script src="${contextPath!}/static/js/tab4_statistics.js?time=New Date()"></script>
 
  <script>
     $(function () {
@@ -70,6 +71,7 @@
         loadTab1Data();
         loadTab2Data();
         loadTab3Data();
+        loadTab4Data();
     });
    
 </script>
