总状态中的左下角；实验室状态右下角样式找回

--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -171,34 +171,58 @@
         <div class="total_bottom_left">
             <div class="echarts_title echarts_title2">量产一致性保障</div>
             <div class="total_bottom_pie">
+                <h3>模块商质量水平分布</h3>
                 <div id="myChart8"></div>
             </div>
             <div class="total_bottom_tab">
                 <ul>
-                    <li class="li-main">模块商1</li>
-                    <li class="li-sub">模块商1子菜单</li>
-                    <li class="li-sub">模块商1子菜单</li>
-                    <li class="li-sub">模块商1子菜单</li>
-                    <li class="li-sub">模块商1子菜单</li>
-                    <li class="li-sub">模块商1子菜单</li>
-                    <li class="li-main">模块商2</li>
-                    <li class="li-sub">模块商2子菜单</li>
-                    <li class="li-sub">模块商2子菜单</li>
-                    <li class="li-sub">模块商2子菜单</li>
-                    <li class="li-sub">模块商2子菜单</li>
-                    <li class="li-sub">模块商2子菜单</li>
-                    <li class="li-main">模块商3</li>
-                    <li class="li-sub">模块商3子菜单</li>
-                    <li class="li-sub">模块商3子菜单</li>
-                    <li class="li-sub">模块商3子菜单</li>
-                    <li class="li-sub">模块商3子菜单</li>
-                    <li class="li-sub">模块商3子菜单</li>
+                    <li class="main main1">常州福兰德电器</li>
+                    <li>
+                        <ul>
+                            <li class="main1-sub active">WY77H-C1</li>
+                            <li class="main1-sub">WY75H-C7</li>
+                            <li class="main1-sub">WY-S704</li>
+                        </ul>
+                    </li>
+                    <li class="main">章丘海尔电机</li>
+                    <li style="display: none">
+                        <ul>
+                            <li class="main2-sub">200E</li>
+                            <li class="main2-sub">300E</li>
+                            <li class="main2-sub">400E</li>
+                        </ul>
+                    </li>
+
+                    <li class="main">海尔智能电子</li>
+                    <li>
+                        <ul></ul>
+                    </li>
+                    <li class="main">广州万宝集团</li>
+                    <li>
+                        <ul></ul>
+                    </li>
+                    <li class="main">黄石东贝压缩机</li>
+                    <li>
+                        <ul></ul>
+                    </li>
+                    <li class="main">斐雪派克电器</li>
+                    <li>
+                        <ul></ul>
+                    </li>
+                    <li class="main">重庆合信包装</li>
+                    <li>
+                        <ul></ul>
+                    </li>
+                    <li class="main">青岛宝井钢材</li>
                 </ul>
 
             </div>
             <div class="total_bottom_bar1">
                 <!--<div class="echarts_title echarts_title1">量产一致性对比分析</div>-->
+                <h3><span class="white">"型号A产品"</span> SPC分析</h3>
+                <p class="result">过程稳定</p>
                 <div id="myChart9"></div>
+                <div id="myChart9_2"></div>
 
             </div>
             <div class="total_bottom_bar2">
