--- a/src/main/webapp/static/css/index_right.css
+++ b/src/main/webapp/static/css/index_right.css
@@ -614,19 +614,19 @@
 }
 .sheshi_top_left .zaixian{
     padding-top: 1%;
-    height: 15%;
+    height: 18%;
     width: 100%;
     margin: 0 auto;
     text-align: center;
     background-color: #00aaff;
     background: url("../img/sheshiState/gznx-bg.png") no-repeat;
     background-size: 100% 100%;
-    font-size: 0.8em;
+    font-size: 1em;
 }
 .sheshi_top_left .zaixian table{
     width:100%;
     /*background-color: pink;*/
-    margin-top: 1.5em;
+    margin-top:1.5em;
     text-align: center;
 }
 
@@ -635,10 +635,10 @@
     text-align: center;
 }
 .sheshi_top_left .zaixian table tr td{
-    width: 25%;
-    padding: 0.7em 0;
+    width: 19%;
+    padding: 0.5em 0;
     color:  #66ccff;
-    font-size: 1.1em;
+    font-size: 1em;
     position: relative;
 
 }
@@ -697,6 +697,19 @@
 .sheshi_top_rihght .renyuan_top{
     width: 100%;
     height: 30%;
+}
+.sheshi_top_rihght .renyuan_top .renyuan_top_title{
+    width: 100%;
+    margin: 0 auto;
+}
+.sheshi_top_rihght .renyuan_top .renyuan_top_title>div{
+    width: 36%;
+    margin: 0 auto;
+    background: url(../img/sheshiState/gznx-bg.png) no-repeat;
+    background-size: 100% 100%;
+}
+.sheshi_top_rihght .renyuan_top .gongzuonianxian div{
+    width: 56%;
 }
 .sheshi_top_rihght .renyuan_top>ul{
     width: 98%;
@@ -887,25 +900,25 @@
     left: 0;
 }
 .nengli_bottom ul .echarts_line1{
-    left: 13.6%;
+    left: 15.6%;
 }
 .nengli_bottom ul .echarts_line2{
-    left:27.3%;
+    left:28.3%;
 }
 .nengli_bottom ul .echarts_line3{
-    left: 39.6%;
+    left: 40.6%;
 }
 .nengli_bottom ul .echarts_line4{
-    left: 52.2%;
+    left: 53.2%;
 }
 .nengli_bottom ul .echarts_line5{
-    left: 63.9%;
+    left: 64.9%;
 }
 .nengli_bottom ul .echarts_line6{
-    left: 76.5%;
+    left: 77.2%;
 }
 .nengli_bottom ul .echarts_line7{
-    left: 89%;
+    left: 85%;
 }
 
 .nengli_bottom ul li:first-of-type{
