--- a/src/main/webapp/layout/tab/tab3.html
+++ b/src/main/webapp/layout/tab/tab3.html
@@ -6,7 +6,7 @@
                 <li class="order_left">
                     <div class="order_all">
                         <ul>
-                            <li>整机</li>
+                            <li>整机订单总数</li>
                             <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                   alt=""></span><span
                                     class="up_num">0.05%</span></li>
@@ -19,7 +19,7 @@
                 <li class="order_left">
                     <div class="order_all">
                         <ul>
-                            <li>模块</li>
+                            <li>模块订单总数</li>
                             <li class="sheshi_num">96% <span><img src="${contextPath!}/static/img/sheshiState/rise.png"
                                                                   alt=""></span><span
                                     class="up_num">0.05%</span></li>
