--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -159,10 +159,12 @@
         </div>
         <div class="total_center_3">
             <div class="echarts_title">订单及时率</div>
+            <h3>当年订单及时率<span class="orange bigger">97%，</span>同比上升<span class="orange bigger">60%</span></h3>
             <div id="myChart6"></div>
         </div>
         <div class="total_center_4">
             <div class="echarts_title">用户满意度</div>
+            <h3>海尔今年实验室用户满意度为<span class="orange bigger">99%，</span>同比上升<span class="orange bigger">80%</span></h3>
             <div id="myChart7"></div>
         </div>
     </div>
@@ -172,6 +174,7 @@
             <div class="echarts_title echarts_title2">量产一致性保障</div>
             <div class="total_bottom_pie">
                 <h3>模块商质量水平分布</h3>
+                <div class="rename-ppm">ppm</div>
                 <div id="myChart8"></div>
             </div>
             <div class="total_bottom_tab">
